@@ -6,6 +6,9 @@
 
   * Don't error when creating GitFiles with the default mode. (Dave Borowitz)
 
+  * ThinPackData.from_file now works with resolve_ext_ref callback.
+    (Dave Borowitz)
+
  FEATURES
 
   * Use slots for core objects to save up on memory. (Jelmer Vernooij)
